--- a/bower.json
+++ b/bower.json
@@ -17,11 +17,14 @@
     "bootstrap-social": "4.8.0",
     "bootstrap": "3.3.2",
     "jquery": "2.1.3",
-    "font-awesome": "4.2.0",
+    "font-awesome": "4.3.0",
     "mailcheck": "1.1.0",
     "html5shiv": "3.7.2",
     "respond": "1.4.2",
     "spin.js": "2.0.2",
     "octicons": "2.1.2"
+  },
+  "resolutions": {
+    "font-awesome": "4.3.0"
   }
 }
