--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
-  - "2.2.0"
+  - 2.0
+  - 2.1
+  - 2.2
+  - ruby-head
 before_install:
   - curl -sL https://deb.nodesource.com/setup | sudo bash -
   - sudo apt-get update
