Add cache directories to Circle CI and upgrade docker-compose to 1.5.2

--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,6 @@ machine:
   services:
     - docker
 
-  timezone:
-    America/Los_Angeles # Set the timezone
-
   node:
     version: 0.12.0
 
@@ -14,9 +11,13 @@ machine:
     gitnotifier.local: 127.0.0.1
 
 dependencies:
+  cache_directories:
+    - "~/.cache/bower"
+    - "~/.npm"
+
   override:
     - docker -v
-    - sudo curl -L https://github.com/docker/compose/releases/download/1.5.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+    - sudo curl -L https://github.com/docker/compose/releases/download/1.5.2/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
     - sudo chmod +x /usr/local/bin/docker-compose
     - npm install -g casperjs@1.1.0-beta3
     - cp config/docker.env.example config/docker.env
