Single ENV statements to reduce docker images layers

--- a/Dockerfile_sidekiq
+++ b/Dockerfile_sidekiq
@@ -1,33 +1,33 @@
 FROM ruby:2.2.3-onbuild
 
 # Set proper locale
-ENV LANG C.UTF-8
+ENV LANG=C.UTF-8 \
 
-ENV APP_ENV development
-ENV APP_CONFIG_GITHUB_CLIENT_ID someid
-ENV APP_CONFIG_GITHUB_CLIENT_SECRET somesecret
+APP_ENV=development \
+APP_CONFIG_GITHUB_CLIENT_ID=someid \
+APP_CONFIG_GITHUB_CLIENT_SECRET=somesecret \
 
-ENV APP_CONFIG_REDIS_HOST localhost
-ENV APP_CONFIG_REDIS_PORT 6379
-ENV APP_CONFIG_REDIS_DB 1
-ENV APP_CONFIG_REDIS_NAMESPACE ghntfr
+APP_CONFIG_REDIS_HOST=localhost \
+APP_CONFIG_REDIS_PORT=6379 \
+APP_CONFIG_REDIS_DB=1 \
+APP_CONFIG_REDIS_NAMESPACE=ghntfr \
 
-ENV APP_CONFIG_DOMAIN gitnotifier.local
+APP_CONFIG_DOMAIN=gitnotifier.local \
 
-ENV APP_CONFIG_SECRET somesecret
+APP_CONFIG_SECRET=somesecret \
 
-ENV APP_CONFIG_MAIL_ENABLE true
-ENV APP_CONFIG_MAIL_METHOD smtp
-ENV APP_CONFIG_MAIL_FROM "Git Notifier <sender@email.com>"
-ENV APP_CONFIG_MAIL_HOST smtp.example.org
-ENV APP_CONFIG_MAIL_PORT 587
-ENV APP_CONFIG_MAIL_USER someuser@somedomain.com
-ENV APP_CONFIG_MAIL_PASSWORD somepass
+APP_CONFIG_MAIL_ENABLE=true \
+APP_CONFIG_MAIL_METHOD=smtp \
+APP_CONFIG_MAIL_FROM="Git Notifier <sender@email.com>" \
+APP_CONFIG_MAIL_HOST=smtp.example.org \
+APP_CONFIG_MAIL_PORT=587 \
+APP_CONFIG_MAIL_USER=someuser@somedomain.com \
+APP_CONFIG_MAIL_PASSWORD=somepass \
 
-ENV APP_CONFIG_DEPLOY_ID 1
+APP_CONFIG_DEPLOY_ID=1 \
 
-ENV APP_CONFIG_EMAIL_DEV_ON_SIGNUP false
-ENV APP_CONFIG_DEV_EMAIL_ADDRESS some@email.com
+APP_CONFIG_EMAIL_DEV_ON_SIGNUP=false \
+APP_CONFIG_DEV_EMAIL_ADDRESS=some@email.com
 
 ADD ./docker/sidekiq/entrypoint.sh /entrypoint.sh
 
