--- a/Dockerfile_nginx
+++ b/Dockerfile_nginx
@@ -1,7 +1,7 @@
 FROM nginx
 
-ENV APP_CONFIG_DOMAIN gitnotifier.local
-ENV APP_UPSTREAM_PUMA localhost
+ENV APP_CONFIG_DOMAIN=gitnotifier.local \
+APP_UPSTREAM_PUMA=localhost
 
 ADD ./docker/nginx/nginx.conf /etc/nginx/nginx.conf
 ADD ./docker/nginx/gitnotifier /etc/nginx/conf.d/gitnotifier
