--- a/Dockerfile_puma
+++ b/Dockerfile_puma
@@ -1,28 +1,28 @@
 FROM ruby:2.2.3-onbuild
 
 # Set proper locale
-ENV LANG C.UTF-8
+ENV LANG=C.UTF-8 \
 
-EXPOSE 9292
+APP_ENV=development \
+APP_CONFIG_GITHUB_CLIENT_ID=someid \
+APP_CONFIG_GITHUB_CLIENT_SECRET=somesecret \
 
-ENV APP_ENV development
-ENV APP_CONFIG_GITHUB_CLIENT_ID someid
-ENV APP_CONFIG_GITHUB_CLIENT_SECRET somesecret
+APP_CONFIG_REDIS_HOST=localhost \
+APP_CONFIG_REDIS_PORT=6379 \
+APP_CONFIG_REDIS_DB=1 \
+APP_CONFIG_REDIS_NAMESPACE=ghntfr \
 
-ENV APP_CONFIG_REDIS_HOST localhost
-ENV APP_CONFIG_REDIS_PORT 6379
-ENV APP_CONFIG_REDIS_DB 1
-ENV APP_CONFIG_REDIS_NAMESPACE ghntfr
+APP_CONFIG_DOMAIN=gitnotifier.local \
 
-ENV APP_CONFIG_DOMAIN gitnotifier.local
+APP_CONFIG_SECRET=somesecret \
 
-ENV APP_CONFIG_SECRET somesecret
+APP_CONFIG_DEPLOY_ID=1 \
 
-ENV APP_CONFIG_DEPLOY_ID 1
-
-ENV APP_CONFIG_EMAIL_DEV_ON_SIGNUP false
-ENV APP_CONFIG_DEV_EMAIL_ADDRESS some@email.com
+APP_CONFIG_EMAIL_DEV_ON_SIGNUP=false \
+APP_CONFIG_DEV_EMAIL_ADDRESS=some@email.com
 
 ADD ./docker/puma/entrypoint.sh /entrypoint.sh
+
+EXPOSE 9292
 
 ENTRYPOINT [ "/entrypoint.sh" ]
