--- a/config/docker.env.example
+++ b/config/docker.env.example
@@ -7,6 +7,8 @@ APP_CONFIG_REDIS_HOST=redis
 APP_CONFIG_REDIS_PORT=6379
 APP_CONFIG_REDIS_DB=1
 APP_CONFIG_REDIS_NAMESPACE=ghntfr
+APP_CONFIG_STATSD_HOST=localhost
+APP_CONFIG_STATSD_PORT=8125
 APP_CONFIG_DOMAIN=gitnotifier.local
 APP_CONFIG_SECRET=somesecret
 APP_CONFIG_MAIL_ENABLE=true
